force-app/main/default/objects/AssessmentMaster__c/AssessmentMaster__c.object-meta.xml
<CustomObject>
    <label>Assessment Master</label>
    <nameField>
        <label>Assessment Master Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>