force-app/main/default/objects/AssessmentMaster__c/fields/AssessmentEndDate__c.field-meta.xml
<CustomField>
    <fullName>AssessmentEndDate__c</fullName>
    <label>Assessment End Date</label>
    <type>DateTime</type>
</CustomField>