force-app/main/default/objects/AssessmentMaster__c/fields/AssessmentStartDate__c.field-meta.xml
<CustomField>
    <fullName>AssessmentStartDate__c</fullName>
    <label>Assessment Start Date</label>
    <type>DateTime</type>
</CustomField>