force-app/main/default/objects/AssessmentMaster__c/fields/AssessmentTemplateId__c.field-meta.xml
<CustomField>
    <fullName>AssessmentTemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Template</label>
    <referenceTo>AssessmentTemplate__c</referenceTo>
    <relationshipLabel>Assessment Master</relationshipLabel>
    <relationshipName>Assessment_Master</relationshipName>
    <type>Lookup</type>
</CustomField>