force-app/main/default/objects/AssessmentMaster__c/fields/AssessmentType__c.field-meta.xml
<CustomField>
    <fullName>AssessmentType__c</fullName>
    <label>Assessment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategy</fullName>
            </value>
            <value>
                <fullName>Routine</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>