force-app/main/default/objects/AssessmentMaster__c/fields/AssignType__c.field-meta.xml
<CustomField>
    <fullName>AssignType__c</fullName>
    <label>Assign Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>