force-app/main/default/objects/AssessmentMaster__c/fields/GradeId__c.field-meta.xml
<CustomField>
    <fullName>GradeId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Grade</label>
    <referenceTo>AssessmentGrade__c</referenceTo>
    <relationshipLabel>Assessment Master</relationshipLabel>
    <relationshipName>Assessment_Master</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>