force-app/main/default/objects/AssessmentMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AssessmentTemplate__c</columns>
    <columns>AssessmentStartDate__c</columns>
    <columns>AssessmentEndDate__c</columns>
    <columns>Status__c</columns>
    <columns>IsActive__c</columns>
    <columns>AssessmentType__c</columns>
    <columns>AssignType__c</columns>
    <columns>GradeId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>